--- a/styles/index.css
+++ b/styles/index.css
@@ -320,3 +320,83 @@ body {
     border-radius: 1.47px;
     margin-bottom: 71px;
 }
+
+.footer {
+    padding-top: 65px;
+    padding-left: 10%;
+    background-color: var(--color2);
+    padding-bottom: 42px;
+}
+
+.footer__icon {
+    height: 30px;
+    width: 105px;
+    mask-size: contain;
+    mask-repeat: no-repeat;
+    background-color: var(--color1);
+    mask-image: url("../assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/logo.svg");
+    margin-bottom: 32px;
+}
+
+.contact__number, .contact__email {
+    color: var(--color1);
+    font-family: var(--letter2);
+    font-size: calc(1.6rem + 0.5vw);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    display: inline-block;
+    margin-left: 16px;
+}
+
+.contact > .phone {
+    margin-bottom: 16px;
+}
+
+.contact > .email {
+    margin-bottom: 32px;
+}
+
+.about__item, .terms__item {
+    color: var(--color1);
+    font-family: var(--letter2);
+    font-size: calc(1.6rem + 0.5vw);
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.about li:nth-child(n+1):nth-child(-n+3), .terms li:nth-child(n+1):nth-child(-n+2) {
+    margin-bottom: 16px;
+}
+
+.about li:nth-child(4), .terms li:nth-child(3) {
+    margin-bottom: 32px;
+}
+
+.social {
+    display: flex;
+    justify-content: space-between;
+    width: 35%;
+    margin: 0 auto;
+}
+
+.social__facebook {
+    mask-image: url("https://img.icons8.com/?size=100&id=59780&format=png&color=000000");
+}
+
+.social__twitter {
+    mask-image: url("https://img.icons8.com/?size=100&id=8824&format=png&color=000000");
+}
+
+.social__instagram {
+    mask-image: url("https://img.icons8.com/?size=100&id=32309&format=png&color=000000");
+}
+
+.social__facebook--styles, .social__twitter--styles, .social__instagram--styles {
+    height: 27px;
+    width: 27px;
+    mask-size: contain;
+    mask-repeat: no-repeat;
+    background-color: var(--color1);
+}
