--- a/styles/index.css
+++ b/styles/index.css
@@ -47,16 +47,17 @@ body {
 }
 
 .section1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-bottom: 183px;
     margin-top: 98px;
 }
 
 .section1__image {
-    display: block;
     object-fit: contain;
     height: auto;
     width: 81%;
-    margin: 0 auto;
 }
 
 .section1__info {
@@ -101,6 +102,7 @@ body {
     border-radius: 3.13px;
     border: 1px solid var(--color2);
     padding: 21px;
+    font-family: var(--letter1);
 }
 
 .form__placeholder {
@@ -423,31 +425,67 @@ body {
     }
 
     .navbar__item {
-        font-size: calc(1.2rem + 0.5vw);
+        font-size: 1.6rem;
     }
 
     .section1 {
-        display: flex;
+        flex-direction: row;
         margin-top: 100px;
         margin-bottom: 164px;
     }
 
     .section1__image {
         order: 1;
-        width: 50%;
+        width: 45%;
         margin: 0;
     }
     
     .section1__info {
-        align-items: left;
+        align-items:flex-start;
     }
 
     .section1__title {
-        font-size: calc(4rem + 0.5vw);
+        font-size: 4rem;
         text-align: left;
         line-height: 60px;
+        margin-top: 0;
+        margin-bottom: 15px;
+        width: 100%;
+        font-family: var(--letter1);
+    }
+
+    .section1__text {
+        font-size: 1.7rem;
+        line-height: 24px;
+        letter-spacing: 0.531px;
+        text-align: left;
+        width: 100%;
+        margin-top: 0;
+        margin-bottom: 25px;
+    }
+
+    .form1 {
+        flex-direction: row;
         margin: 0;
     }
 
+    .form__input-big {
+        height: 4.5rem;
+        width: 320px;
+        margin-right: 16px;
+    }
+
+    .form__placeholder--big {
+        font-size: 1.4rem;
+        letter-spacing: 0.467px;
+        font-family: var(--letter2);
+    }
+    
+    .form__button--big {
+        height: 4.5rem;
+        margin: 0;
+        width: 200px;
+        font-size: 1.4rem;
+    }
 
 }
