--- a/styles/index.css
+++ b/styles/index.css
@@ -433,8 +433,8 @@ body {
 
     .section1__image {
         order: 1;
-        width: 45%;
-        margin: 0;
+        width: 50%;
+        /* margin: 0; */
     }
     
     .section1__info {
@@ -468,7 +468,7 @@ body {
 
     .form__input-big {
         height: 4.5rem;
-        width: 320px;
+        width: 70%;
         margin-right: 16px;
     }
 
@@ -481,7 +481,7 @@ body {
     .form__button--big {
         height: 4.5rem;
         margin: 0;
-        width: 200px;
+        width: 30%;
         font-size: 1.4rem;
     }
 
@@ -505,7 +505,7 @@ body {
     }
 
     .section2__info {
-        flex-direction: column;
+        /* flex-direction: column; */
         align-items: flex-start;
     }
 
@@ -513,6 +513,8 @@ body {
         font-size: 4rem;
         margin-bottom: 38px;
         margin-top: 5px;
+        text-align: left;
+        line-height: normal;
     }
 
     .section2__text {
